progress on welcome.htm

--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -260,6 +260,12 @@ kbd {
 </tr>
 </table>
 
+<p>
+<img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black;" width="25%"/>
+&nbsp;&nbsp;
+<img src="gff_amharic_classic-tablet-flick-typing-1.png" style="border: 1px solid black;" width="24%"/>
+</p>
+
 
 <p>For a detailed overview, select your device from the list below to read the appropriate manual:</p>
 
@@ -287,8 +293,9 @@ what related letter will come next when typed.  For example, tapping <kbd>ግ</k
 
 <h3>Shifting</h3>
 
+
 <p>
-As with typing Amharic on computers with Latin keyboards, the <kbd>shift</kbd> key is used to type related letters.  Notice that the “hint” on some keys will show which letter is available on that key when shifted.  For example, the ‘ት’ key appears with 2 hints, <kbd class="key_example">ት<sup>ጥT</sup></kbd>, ‘T’ is the usual Latin keyboard letter, and ‘ጥ’ becomes the Amharic letter on the key after pressing <kbd>shift</kbd>. The shift layout is shown below:
+As with typing Amharic on computers with Latin keyboards, the shift, <kbd class='epunct'>⇧</kbd>, key is used to type related letters.  Notice that the “hint” on some keys will show which letter is available on that key when shifted.  For example, the ‘ት’ key appears with 2 hints, <kbd class="key_example">ት<sup>ጥT</sup></kbd>, ‘T’ is the usual Latin keyboard letter, and ‘ጥ’ becomes the Amharic letter on the key after pressing <kbd class='epunct'>⇧</kbd>. The shift layout is shown below:
 </p>
 
 <img src="gff_amharic_classic-phone-shift-1.jpeg" style="border: 1px solid black;" width="100%"/>
@@ -339,6 +346,7 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 2 taps: ፪</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 3 taps: ፳</dd>
 </dl>
+
 
 <h3>Flicking</h3>
 <p>
@@ -417,13 +425,16 @@ letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd>
 <h2>Letters</h2>
 
 <p>
-When the GFF Amharic mobile keyboard starts, the key layout appears as shown in the following image.  Note the relationship between the letters of the <b>middle</b> row and <b>top</b> row:
+When the GFF Amharic Classic QWERTY mobile keyboard starts, the key layout appears as shown in the following image. The layout follows the Latin
+QWERTY style of typing as used in desktop and laptop computers.  Note the Latin letters in the top right corner of the keys (called a “hint”):
 </p>
 
 <img src="gff_amharic_classic-tablet-default-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>
-Tapping a key once, the modifier letters to the left (<kbd class='geez'>አ</kbd>, <kbd class='kaib'>ኡ</kbd>, <kbd class='salis'>ኢ</kbd>) and right  (<kbd class='rabi'>ኣ</kbd>, <kbd class='hamis'>ኤ</kbd>, <kbd class='sabi'>ኦ</kbd>) of the spacebar. For example, tapping <kbd>ግ</kbd> the modifiers change to <kbd class='geez'>ገ</kbd>, <kbd class='kaib'>ጉ</kbd>, <kbd class='salis'>ጊ</kbd>, <kbd class='rabi'>ጋ</kbd>, <kbd class='hamis'>ጌ</kbd>, and <kbd class='sabi'>ጎ</kbd> .  If a modifier is tapped, ግ will be updated on screen.
+Tapping a key once, the vowel keys (<kbd>አ</kbd>, <kbd>ኡ</kbd>, <kbd>ኢ</kbd>, <kbd>ኣ</kbd>, <kbd>ኤ</kbd>, and <kbd>ኦ</kbd>) will change to show
+what related letter will come next when typed.  For example, tapping <kbd>ግ</kbd> the vowel keys change to 
+<kbd class='geez'>ገ</kbd>, <kbd class='kaib'>ጉ</kbd>, <kbd class='salis'>ጊ</kbd>, <kbd class='rabi'>ጋ</kbd>, <kbd class='hamis'>ጌ</kbd>, and <kbd class='sabi'>ጎ</kbd> .  If the updated vowel keys is tapped, ግ will be updated on screen.
 </p>
 <p>
 Observe that some keys have a small “hint” letter in the upper right corner. The hint letters can be typed by making a quick, light, downward “flick” on the key. These letters can also be typed using the “longress” approach explained in a following example.
@@ -473,8 +484,6 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪@&rsquo;, appearing 
   <dd><kbd class="key_example">2<sup>፪@</sup></kbd> 2 taps: @</dd>
 </dl>
 
-<img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black;" width="25%"/>
-
 <h3>Flicking</h3>
 <p>
 Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. A flick is a quick downward stroke (like a swipe) made on the key.
@@ -492,10 +501,6 @@ making additional finger motions to type a letter. Some examples:
 Note that two flicks are possible on the numeral keys. An <em>upward</em> flick is also available, for example an upward flick on the
 <kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;@&rsquo; instead of &lsquo;2&rsquo;.</dd>
 </p>
-
-<img src="gff_amharic_classic-tablet-flick-typing-1.png" style="border: 1px solid black;" width="25%"/>
-
-
 
 
 <h2>Punctuation</h2>
