--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -291,8 +291,8 @@ what related letter will come next when typed.  For example, tapping <kbd>ግ</k
 
 <img src="gff_amharic_classic-phone-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<h3>Shifting</h3>
 
+<h3>Shifting</h3>
 
 <p>
 As with typing Amharic on computers with Latin keyboards, the shift, <kbd class='epunct'>⇧</kbd>, key is used to type related letters.  Notice that the “hint” on some keys will show which letter is available on that key when shifted.  For example, the ‘ት’ key appears with 2 hints, <kbd class="key_example">ት<sup>ጥT</sup></kbd>, ‘T’ is the usual Latin keyboard letter, and ‘ጥ’ becomes the Amharic letter on the key after pressing <kbd class='epunct'>⇧</kbd>. The shift layout is shown below:
@@ -301,17 +301,17 @@ As with typing Amharic on computers with Latin keyboards, the shift, <kbd class=
 <img src="gff_amharic_classic-phone-shift-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <h3>Long Presses</h3>
+
 <p>
-Another way to type a letter, that does not change the vowel keys, is to hold a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <kbd>ግ</kbd> is shown below:
+Another way to type a letter, that does not change the vowel keys, is to hold a key down for a few moments (called a “longpress”) a pop-up menu appears where you can tap the letter desired.  The pop-up menu for <kbd>ግ</kbd> is shown below:
 </p>
 
 <img src="gff_amharic_classic-phone-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
 <p>
-The punctuation keys, <kbd>።</kbd> and <kbd>?</kbd> will also have popups help type more punctuation easily.  
+The punctuation keys, <kbd>።</kbd> and <kbd>?</kbd> will also have longpress pop-ups help type more punctuation easily.  
+The punctuation for a longpress of <kbd>።</kbd>:
 </p>
-
-<p>The punctuation for a longpress of <kbd>።</kbd>:</p>
 
 <img src="gff_amharic_classic-phone-default-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
@@ -323,6 +323,7 @@ The punctuation keys, <kbd>።</kbd> and <kbd>?</kbd> will also have popups help
 
 
 <h3>Tapping</h3>
+
 <p>
 By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
 Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
@@ -345,18 +346,21 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 1 tap: 2</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 2 taps: ፪</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 3 taps: ፳</dd>
+  <dd><img src="gff_amharic_classic-phone-multitap-typing-1.png" style="border: 1px solid black;" width="25%"/></dd>
 </dl>
 
 
 <h3>Flicking</h3>
+
 <p>
 Key &ldquo;flicking&rdquo; is widely supoorted throughout the keyboard.  A flick is a quick stroke (like a swipe) made on the key usually in
 the downward direction, but also upward, and side to side. Flicks are very convenient since they can save you from having to shift to the next
 keyboard view to access a letter, or avoid additioning typing motions that become fatiguing. Most every key will support a flick in some way.
+</p>
 
 <h4>Flicks on letter keys</h4>
-Some examples:
 
+<p>
 Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. 
 </p>
 
@@ -365,13 +369,17 @@ Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hin
   <dd><b>→</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;በ&rsquo;</dd>
   <dd><b>←</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;ባ&rsquo;</dd>
   <dd><b>↑</b> flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo; (and change the vowels).</dd>
+  <dd><img src="gff_amharic_classic-phone-flick-typing-1.png" style="border: 1px solid black;" width="24%"/></dd>
 </dl>
 
 <h4>Flicks on other keys</h4>
+
+<p>
 On other keys, such as punctuation and number keys, a downward flick will will enter the symbol shown in the <em>hint</em>. 
 For example, <span style="font-family:Arial;">↓</span>-flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.
 The flick options will mirror those on iPhone and iPad keyboards. On the number keys after pressing the <kbd class="epunct">123</kbd> key,
 downward and upward flicks work to enter the Geʾez numbers following:
+</p>
 
 <dl style="text-indent: 20px">
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> <span style="font-family:Arial;">↑</span>-flick: ፪</dd>
@@ -380,13 +388,17 @@ downward and upward flicks work to enter the Geʾez numbers following:
 
 
 <h4>Return flicks</h4>
+
+<p>
 Any of the special keys, such as <kbd>shift</kbd>, <kbd>space</kbd>, <kbd>⌫</kbd>, <kbd>return</kbd>, and others on the bottom row
 of the keyboard, can be flicked in any direction to return to the starting keyboard position. For example, from any keyboard view on
 the screen, flicking <span style="font-family:Arial;">←</span> , <span style="font-family:Arial;">→</span> or <span style="font-family:Arial;">↓</span> on the <kbd>space</kbd> key will bring the keyboard back to its starting point.
+</p>
 
+<p>
 A special return flick is also provided on a key after typing it. For example, after typing the <kbd>ግ</kbd> key and seeing the vowel
 letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd> will bring the keyboard back to the start (instead of entering &lsquo;ግ&rsquo; as a <span style="font-family:Arial;">↓</span> flick normallay would).
-
+</p>
 
 <h2>Punctuation</h2>
 
@@ -398,7 +410,7 @@ letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd>
 
 <img src="gff_amharic_classic-phone-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>Note that numerals on the punctuation layer use the long press feature to make Geʾez numerals available:</p>
+<p>Note that numerals on the punctuation layer use the longpress feature to make Geʾez numerals available:</p>
 
 <img src="gff_amharic_classic-phone-punctuation-1-numbers.jpeg" style="border: 1px solid black;" width="100%"/>
 
@@ -437,69 +449,119 @@ what related letter will come next when typed.  For example, tapping <kbd>ግ</k
 <kbd class='geez'>ገ</kbd>, <kbd class='kaib'>ጉ</kbd>, <kbd class='salis'>ጊ</kbd>, <kbd class='rabi'>ጋ</kbd>, <kbd class='hamis'>ጌ</kbd>, and <kbd class='sabi'>ጎ</kbd> .  If the updated vowel keys is tapped, ግ will be updated on screen.
 </p>
 <p>
-Observe that some keys have a small “hint” letter in the upper right corner. The hint letters can be typed by making a quick, light, downward “flick” on the key. These letters can also be typed using the “longress” approach explained in a following example.
+Observe that some keys have a small “hint” letter in the upper right corner. The hint letters can be typed by making a quick, light, downward “flick” on the key. These letters can also be typed using the “lonpgress” approach explained in a following example.
 </p>
 
 <img src="gff_amharic_classic-tablet-default-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>⇧</kbd> key to shift to the next layer:</p>
 
-<img src="gff_amharic_classic-tablet-shift-1.jpeg" style="border: 1px solid black;" width="100%"/>
+<h3>Shifting</h3>
+
+<p>
+As with typing Amharic on computers with Latin keyboards, the shift, <kbd class='epunct'>⇧</kbd>, key is used to type related letters.  Notice that the “hint” on some keys will show which letter is available on that key when shifted.  For example, the ‘ት’ key appears with 2 hints, <kbd class="key_example">ት<sup>ጥT</sup></kbd>, ‘T’ is the usual Latin keyboard letter, and ‘ጥ’ becomes the Amharic letter on the key after pressing <kbd class='epunct'>⇧</kbd>. The shift layout is shown below:
+</p>
+
+<img src="gff_amharic_classic-phone-shift-1.jpeg" style="border: 1px solid black;" width="100%"/>
+
 
 <h3>Long Presses</h3>
+
 <p>
-As an alternative, if preferred, holding a key down for a few moments (called a “longpress”) a popup menu appears where you can tap the letter desired.  The popup menu for <kbd>ግ</kbd> is shown below:
+Another way to type a letter, that does not change the vowel keys, is to hold a key down for a few moments (called a “longpress”) a pop-up menu appears where you can tap the letter desired.  The pop-up menu for <kbd>ግ</kbd> is shown below:
 </p>
 
 <img src="gff_amharic_classic-tablet-default-3.jpeg" style="border: 1px solid black;" width="100%"/>
 
+<p>
+The punctuation keys, <kbd>።</kbd> and <kbd>?</kbd> will also have longpress pop-ups help type more punctuation easily.  
+The punctuation for a longpress of <kbd>።</kbd>:
+</p>
 
+<img src="gff_amharic_classic-tablet-default-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>Note that Geʾez numerals are available by using a long press on the number keys:</p>
+<p>The punctuation for a longpress of <kbd>?</kbd>:</p>
 
-<img src="gff_amharic_classic-tablet-punctuation-1-numbers.jpeg" style="border: 1px solid black;" width="100%"/>
+<img src="gff_amharic_classic-tablet-default-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
+
+<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>123</kbd> key to shift to the next layer:</p>
 
 
 <h3>Tapping</h3>
+
 <p>
 By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
 Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
 When a letter has a hint, a &ldquo;Triple-Tap&rdquo; is also possible where the third tap will enter the hint letter in the first order.
-For example, the &lsquo;ብ&rsquo; key has the hint &lsquo;ቭ&rsquo;, appearing as <kbd class="key_example">ብ<sup>ቭ</sup></kbd>, tapping the key produces:
+For example, the &lsquo;ን&rsquo; key has the hint &lsquo;ኝN&rsquo;, appearing as <kbd class="key_example">ን<sup>ኝN</sup></kbd>, tapping the key produces:
 </p>
 
 <dl style="text-indent: 20px">
-  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 1 tap: ብ</dd>
-  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 2 taps: በ</dd>
-  <dd><kbd class="key_example">ብ<sup>ቭ</sup></kbd> 3 taps: ቨ</dd>
+  <dd><kbd class="key_example">ን<sup>ኝN</sup></kbd> 1 tap: ን</dd>
+  <dd><kbd class="key_example">ን<sup>ኝN</sup></kbd> 2 taps: ነ</dd>
+  <dd><kbd class="key_example">ን<sup>ኝN</sup></kbd> 3 taps: ኝ</dd>
 </dl>
 
 <p>
 In other cases, such as for punctuation or numerals, multiple-taps can be used in addition to a flick to type the symbol shown in the hint.
-For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪@&rsquo;, appearing as <kbd class="key_example">2<sup>፪@</sup></kbd>, tapping the key produces: 
+For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing as <kbd class="key_example">2<sup>፪</sup></kbd>, tapping the key produces: 
 </p>
 
 <dl style="text-indent: 20px">
-  <dd><kbd class="key_example">2<sup>፪@</sup></kbd> 1 tap: 2</dd>
-  <dd><kbd class="key_example">2<sup>፪@</sup></kbd> 2 taps: @</dd>
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> 1 tap: 2</dd>
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> 2 taps: ፪</dd>
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> 3 taps: ፳</dd>
+  <dd><img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black;" width="25%"/></dd>
 </dl>
+
 
 <h3>Flicking</h3>
+
 <p>
-Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. A flick is a quick downward stroke (like a swipe) made on the key.
-Flicks are very convenient since they can save you from having to shift to the next keyboard view to access a letter, or avoid the need of
-making additional finger motions to type a letter. Some examples:
+Key &ldquo;flicking&rdquo; is widely supoorted throughout the keyboard.  A flick is a quick stroke (like a swipe) made on the key usually in
+the downward direction, but also upward, and side to side. Flicks are very convenient since they can save you from having to shift to the next
+keyboard view to access a letter, or avoid additioning typing motions that become fatiguing. Most every key will support a flick in some way.
+</p>
+
+<h4>Flicks on letter keys</h4>
+<p>
+Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hint. 
 </p>
 
 <dl style="text-indent: 20px">
-  <dd>• Flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo;.</dd>
-  <dd>• Flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.</dd>
-  <dd>• Flicking the <kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;፪&rsquo; instead of &lsquo;2&rsquo;.</dd>
+  <dd><b>↓</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;ብ&rsquo; <em>without</em> changing the vowels.</dd>
+  <dd><b>→</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;በ&rsquo;</dd>
+  <dd><b>←</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;ባ&rsquo;</dd>
+  <dd><b>↑</b> flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo; (and change the vowels).</dd>
+  <dd><img src="gff_amharic_classic-tablet-flick-typing-1.png" style="border: 1px solid black;" width="24%"/></dd>
 </dl>
 
+
+<h4>Flicks on other keys</h4>
+
 <p>
-Note that two flicks are possible on the numeral keys. An <em>upward</em> flick is also available, for example an upward flick on the
-<kbd class="key_example">2<sup>፪@</sup></kbd> key will type &lsquo;@&rsquo; instead of &lsquo;2&rsquo;.</dd>
+On other keys, such as punctuation and number keys, a downward flick will will enter the symbol shown in the <em>hint</em>. 
+For example, <span style="font-family:Arial;">↓</span>-flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.
+The flick options will mirror those on iPhone and iPad keyboards. On the number keys after pressing the <kbd class="epunct">123</kbd> key,
+downward and upward flicks work to enter the Geʾez numbers following:
+</p>
+
+<dl style="text-indent: 20px">
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> <span style="font-family:Arial;">↑</span>-flick: ፪</dd>
+  <dd><kbd class="key_example">2<sup>፪</sup></kbd> <span style="font-family:Arial;">↓</span>-flick: ፳</dd>
+</dl>
+
+
+<h4>Return flicks</h4>
+
+<p>
+Any of the special keys, such as <kbd>shift</kbd>, <kbd>space</kbd>, <kbd>⌫</kbd>, <kbd>return</kbd>, and others on the bottom row
+of the keyboard, can be flicked in any direction to return to the starting keyboard position. For example, from any keyboard view on
+the screen, flicking <span style="font-family:Arial;">←</span> , <span style="font-family:Arial;">→</span> or <span style="font-family:Arial;">↓</span> on the <kbd>space</kbd> key will bring the keyboard back to its starting point.
+</p>
+
+<p>
+A special return flick is also provided on a key after typing it. For example, after typing the <kbd>ግ</kbd> key and seeing the vowel
+letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd> will bring the keyboard back to the start (instead of entering &lsquo;ግ&rsquo; as a <span style="font-family:Arial;">↓</span> flick normallay would).
 </p>
 
 
