Reset flick and multitap image widths.

--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -346,7 +346,7 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 1 tap: 2</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 2 taps: ፪</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 3 taps: ፳</dd>
-  <dd><img src="gff_amharic_classic-phone-multitap-typing-1.png" style="border: 1px solid black;" width="25%"/></dd>
+  <dd><img src="gff_amharic_classic-phone-multitap-typing-1.png" style="border: 1px solid black;" width="60%"/></dd>
 </dl>
 
 
@@ -369,7 +369,7 @@ Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hin
   <dd><b>→</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;በ&rsquo;</dd>
   <dd><b>←</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;ባ&rsquo;</dd>
   <dd><b>↑</b> flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo; (and change the vowels).</dd>
-  <dd><img src="gff_amharic_classic-phone-flick-typing-1.png" style="border: 1px solid black;" width="24%"/></dd>
+  <dd><img src="gff_amharic_classic-phone-flick-typing-1.png" style="border: 1px solid black;" width="60%"/></dd>
 </dl>
 
 <h4>Flicks on other keys</h4>
@@ -510,7 +510,7 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 1 tap: 2</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 2 taps: ፪</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 3 taps: ፳</dd>
-  <dd><img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black;" width="25%"/></dd>
+  <dd><img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black; width="60%"/></dd>
 </dl>
 
 
@@ -532,7 +532,7 @@ Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hin
   <dd><b>→</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;በ&rsquo;</dd>
   <dd><b>←</b> flicking the <kbd class="key_example">ብ<sup>B</sup></kbd> key will type &lsquo;ባ&rsquo;</dd>
   <dd><b>↑</b> flicking the <kbd class="key_example">ስ<sup>ሥ</sup></kbd> key will type &lsquo;ሥ &rsquo; instead of &lsquo;ስ&rsquo; (and change the vowels).</dd>
-  <dd><img src="gff_amharic_classic-tablet-flick-typing-1.png" style="border: 1px solid black;" width="24%"/></dd>
+  <dd><img src="gff_amharic_classic-tablet-flick-typing-1.png" style="border: 1px solid black;" width="60%"/></dd>
 </dl>
 
 
