--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -194,8 +194,8 @@ kbd {
 <h1>The Geʾez Frontier Foundation Classic QWERTY Keyboard for the Amharic (አማርኛ) Language</h1>
 
 <h2><a id="abstract" name="abstract"></a>Introduction</h2>
-<p>Thank you for installing the Geʾez Frontier Foundation&rsquo;s Amharic Classic QWERTY Keyboard! The keyboard will have a familair layout to iPhone
-&amp; iPad users with additions that making typing in Amharic (also Tigrinya, Khimtanga, and related langaues) a natural experience.  
+<p>Thank you for installing the Geʾez Frontier Foundation&rsquo;s Amharic Classic QWERTY Keyboard! The keyboard will have a familiar layout to iPhone
+&amp; iPad users with additions that making typing in Amharic (also Tigrinya, Khimtanga, and related languages) a natural experience.  
 
 <h3>Quick Guide to Flicks and Taps</h3>
 
@@ -234,7 +234,7 @@ kbd {
   <td><kbd class="key_example">ብ<sup>B</sup></kbd> ⮕ ብ</td>
   <td><kbd class="key_example">ን<sup>ኝN</sup></kbd> ⮕ ን</td>
   <td><kbd class="key_example">2<sup>፪</sup></kbd> ⮕ ፪</td>
-  <td>⮌ (return to start)</td>
+  <td>⟲ (return to start)</td>
 </tr>
 <tr>
   <th align="right">↑ Flick</th>
@@ -242,21 +242,21 @@ kbd {
   <!-- td><kbd class="key_example">ብ<sup>B</sup></kbd> ⮕ ብ</td -->
   <td><kbd class="key_example">ን<sup>ኝN</sup></kbd> ⮕ ኝ</td>
   <td><kbd class="key_example">2<sup>፪</sup></kbd> ⮕ ፳</td>
-  <td>⮌ (return to start)</td>
+  <td>⟲ (return to start)</td>
 </tr>
 <tr>
   <th align="right">→ Flick</th>
   <td><kbd class="key_example">ብ<sup>B</sup></kbd> ⮕ በ</td>
   <td><kbd class="key_example">ን<sup>ኝN</sup></kbd> ⮕ ነ</td>
   <td>&nbsp;</td>
-  <td>⮌ (return to start)</td>
+  <td>⟲ (return to start)</td>
 </tr>
 <tr>
   <th align="right">← Flick</th>
   <td><kbd class="key_example">ብ<sup>B</sup></kbd> ⮕ ባ</td>
   <td><kbd class="key_example">ን<sup>ኝN</sup></kbd> ⮕ ና</td>
   <td>&nbsp;</td>
-  <td>⮌ (return to start)</td>
+  <td>⟲ (return to start)</td>
 </tr>
 </table>
 
@@ -326,7 +326,7 @@ The punctuation for a longpress of <kbd>።</kbd>:
 
 <p>
 By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
-Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
+Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occurring).
 When a letter has a hint, a &ldquo;Triple-Tap&rdquo; is also possible where the third tap will enter the hint letter in the first order.
 For example, the &lsquo;ን&rsquo; key has the hint &lsquo;ኝN&rsquo;, appearing as <kbd class="key_example">ን<sup>ኝN</sup></kbd>, tapping the key produces:
 </p>
@@ -353,9 +353,9 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
 <h3>Flicking</h3>
 
 <p>
-Key &ldquo;flicking&rdquo; is widely supoorted throughout the keyboard.  A flick is a quick stroke (like a swipe) made on the key usually in
+Key &ldquo;flicking&rdquo; is widely supported throughout the keyboard.  A flick is a quick stroke (like a swipe) made on the key usually in
 the downward direction, but also upward, and side to side. Flicks are very convenient since they can save you from having to shift to the next
-keyboard view to access a letter, or avoid additioning typing motions that become fatiguing. Most every key will support a flick in some way.
+keyboard view to access a letter, or avoid additional typing motions that become fatiguing. Most every key will support a flick in some way.
 </p>
 
 <h4>Flicks on letter keys</h4>
@@ -397,7 +397,7 @@ the screen, flicking <span style="font-family:Arial;">←</span> , <span style="
 
 <p>
 A special return flick is also provided on a key after typing it. For example, after typing the <kbd>ግ</kbd> key and seeing the vowel
-letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd> will bring the keyboard back to the start (instead of entering &lsquo;ግ&rsquo; as a <span style="font-family:Arial;">↓</span> flick normallay would).
+letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd> will bring the keyboard back to the start (instead of entering &lsquo;ግ&rsquo; as a <span style="font-family:Arial;">↓</span> flick normally would).
 </p>
 
 <h2>Punctuation</h2>
@@ -490,7 +490,7 @@ The punctuation for a longpress of <kbd>።</kbd>:
 
 <p>
 By default, the keyboard keys enter the 6<sup>th</sup> order (ሳድስ) letter because the are the most frequent in Amharic vocabulary.
-Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occuring).
+Tapping a key quickly twice, a &ldquo;Double-Tap&rdquo;, will enter the 1<sup>st</sup> order (ግዕዝ) letter (the next most frequently occurring).
 When a letter has a hint, a &ldquo;Triple-Tap&rdquo; is also possible where the third tap will enter the hint letter in the first order.
 For example, the &lsquo;ን&rsquo; key has the hint &lsquo;ኝN&rsquo;, appearing as <kbd class="key_example">ን<sup>ኝN</sup></kbd>, tapping the key produces:
 </p>
@@ -510,16 +510,16 @@ For example, the &lsquo;2&rsquo; key has the hint &lsquo;፪&rsquo;, appearing a
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 1 tap: 2</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 2 taps: ፪</dd>
   <dd><kbd class="key_example">2<sup>፪</sup></kbd> 3 taps: ፳</dd>
-  <dd><img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black; width="60%"/></dd>
+  <dd><img src="gff_amharic_classic-tablet-multitap-typing-1.png" style="border: 1px solid black;" width="60%"/></dd>
 </dl>
 
 
 <h3>Flicking</h3>
 
 <p>
-Key &ldquo;flicking&rdquo; is widely supoorted throughout the keyboard.  A flick is a quick stroke (like a swipe) made on the key usually in
+Key &ldquo;flicking&rdquo; is widely supported throughout the keyboard.  A flick is a quick stroke (like a swipe) made on the key usually in
 the downward direction, but also upward, and side to side. Flicks are very convenient since they can save you from having to shift to the next
-keyboard view to access a letter, or avoid additioning typing motions that become fatiguing. Most every key will support a flick in some way.
+keyboard view to access a letter, or avoid additional typing motions that become fatiguing. Most every key will support a flick in some way.
 </p>
 
 <h4>Flicks on letter keys</h4>
@@ -561,7 +561,7 @@ the screen, flicking <span style="font-family:Arial;">←</span> , <span style="
 
 <p>
 A special return flick is also provided on a key after typing it. For example, after typing the <kbd>ግ</kbd> key and seeing the vowel
-letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd> will bring the keyboard back to the start (instead of entering &lsquo;ግ&rsquo; as a <span style="font-family:Arial;">↓</span> flick normallay would).
+letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd> will bring the keyboard back to the start (instead of entering &lsquo;ግ&rsquo; as a <span style="font-family:Arial;">↓</span> flick normally would).
 </p>
 
 
