--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -390,7 +390,7 @@ downward and upward flicks work to enter the Geʾez numbers following:
 <h4>Return flicks</h4>
 
 <p>
-Any of the special keys, such as <kbd>shift</kbd>, <kbd>space</kbd>, <kbd>⌫</kbd>, <kbd>return</kbd>, and others on the bottom row
+Any of the special keys, such as <kbd>⇧</kbd>, <kbd>space</kbd>, <kbd>⌫</kbd>, <kbd>return</kbd>, and others on the bottom row
 of the keyboard, can be flicked in any direction to return to the starting keyboard position. For example, from any keyboard view on
 the screen, flicking <span style="font-family:Arial;">←</span> , <span style="font-family:Arial;">→</span> or <span style="font-family:Arial;">↓</span> on the <kbd>space</kbd> key will bring the keyboard back to its starting point.
 </p>
@@ -483,7 +483,7 @@ The punctuation for a longpress of <kbd>።</kbd>:
 
 <img src="gff_amharic_classic-tablet-default-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>123</kbd> key to shift to the next layer:</p>
+<p>For additional letters that would be typed with a shift on a laptop keyboard, tap the <kbd class='epunct'>.?123</kbd> key to shift to the next layer:</p>
 
 
 <h3>Tapping</h3>
@@ -541,7 +541,7 @@ Keys with hints can be &ldquo;flicked&rdquo; to type the symbol shown in the hin
 <p>
 On other keys, such as punctuation and number keys, a downward flick will will enter the symbol shown in the <em>hint</em>. 
 For example, <span style="font-family:Arial;">↓</span>-flicking the <kbd class="key_example">$<sup>€</sup></kbd> key will type &lsquo;€&rsquo; instead of &lsquo;$&rsquo;.
-The flick options will mirror those on iPhone and iPad keyboards. On the number keys after pressing the <kbd class="epunct">123</kbd> key,
+The flick options will mirror those on iPhone and iPad keyboards. On the number keys after pressing the <kbd class="epunct">.?123</kbd> key,
 downward and upward flicks work to enter the Geʾez numbers following:
 </p>
 
@@ -554,7 +554,7 @@ downward and upward flicks work to enter the Geʾez numbers following:
 <h4>Return flicks</h4>
 
 <p>
-Any of the special keys, such as <kbd>shift</kbd>, <kbd>space</kbd>, <kbd>⌫</kbd>, <kbd>return</kbd>, and others on the bottom row
+Any of the special keys, such as <kbd>⇧</kbd>, <kbd>space</kbd>, <kbd>⌫</kbd>, <kbd>return</kbd>, and others on the bottom row
 of the keyboard, can be flicked in any direction to return to the starting keyboard position. For example, from any keyboard view on
 the screen, flicking <span style="font-family:Arial;">←</span> , <span style="font-family:Arial;">→</span> or <span style="font-family:Arial;">↓</span> on the <kbd>space</kbd> key will bring the keyboard back to its starting point.
 </p>
@@ -567,11 +567,11 @@ letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd>
 
 <h2>Punctuation</h2>
 
-<p>When typing letters, the <kbd>?</kbd> and <kbd class='epunct'>።</kbd> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <kbd>?</kbd>:</p>
+<p>When typing letters, the <kbd>?</kbd> and <kbd>።</kbd> keys are available for entering the most common punctuation without shifting to another “layer”.  The following image shows the punctuation for a longpress of <kbd>?</kbd>:</p>
 
 <img src="gff_amharic_classic-tablet-default-punctuation-1.jpeg" style="border: 1px solid black;" width="100%"/>
 
-<p>The punctuation for a longpress of <kbd class='epunct'>።</kbd>:</p>
+<p>The punctuation for a longpress of <kbd>።</kbd>:</p>
 
 <img src="gff_amharic_classic-tablet-default-punctuation-2.jpeg" style="border: 1px solid black;" width="100%"/>
 
