Updates as per review feedback.

--- a/release/gff/gff_amharic_classic/source/welcome/welcome.htm
+++ b/release/gff/gff_amharic_classic/source/welcome/welcome.htm
@@ -602,7 +602,7 @@ letters change, a <span style="font-family: Arial;">↓</span> on <kbd>ግ</kbd>
 
 <h2>License</h2>
 
-<p>This keyboard is copyright © Geʾez Frontier Foundation, 1997-2025. It is distributed under the MIT free software license:</p>
+<p>This keyboard is copyright © Geʾez Frontier Foundation. It is distributed under the MIT free software license:</p>
 
 <div style="margin-left: 1em;">
   <table>
