--- a/release/itrans/itrans_devanagari_sanskrit_pre_vedic/source/welcome/welcome.htm
+++ b/release/itrans/itrans_devanagari_sanskrit_pre_vedic/source/welcome/welcome.htm
@@ -72,25 +72,28 @@ text-align: right;
 </style>
 </head>
 <body>
-<h1>Pre-Vedic Sanskrit Devanagari Phonetic (ITRANS) Keyboard</h1>
-
 <h2 id="description">Description</h2>
 <p>Pre-Vedic Sanskrit Devanagari Phonetic (ITRANS) keyboard is Sanskrit devanAgarI input method by a modified version of ITRANS and Harvard-Kyoto transliteration systems with the following special features:</p>
 <ul>
-<li>added support for reconstructed vedic pronunciation ai=ए, Ai=ऐ, au=ओ, Au=औ.</li>
-<li>allow input of hrasva ऎ and ऒ.</li>
+    <li>greater reliance on reconstructed early vedic pronunciation (details and demo <a href="https://vishvAsa.github.io/sanskrit/registers/early-vedic">here</a>) <ul>
+        <li>ai=ए, Ai=ऐ, au=ओ, Au=औ.</li>
+        <li>emphasis on the udAtta accent instead of svarita.</li>
+    </ul>
+    </li>
+    <li>allow input of hrasva ऎ and ऒ.</li>
+    <li>support for common dravidian sounds (useful for maNipravALa).</li>
 </ul>
 <p>You can use all the standard ITRANS key sequences plus key
-sequences such as the below.</p>
+    sequences such as the below.</p>
 <p>nk-&gt;ङ्क्, nkh-&gt;ङ्ख्, ng-&gt;ङ्ग्, ngh-&gt;ङ्घ्
-nch-&gt;ञ्च्, nCh-&gt;ञ्छ्, nc-&gt;ञ्च्, nC-&gt;ञ्छ्, nchh-&gt;ञ्छ्,
-nj-&gt;ञ्ज्, njh-&gt;ञ्झ्, nT-&gt;ण्ट्, nTh-&gt;ण्ठ्, nD-&gt;ण्ड्, nDh-&gt;ण्ढ्
-c-&gt;च्, C-&gt;छ्, z-&gt;श्, S-&gt;ष्, jn-&gt;ज्ञ्, R-&gt;ऋ</p>
-<p>Examples: Type <code>saMskRta</code> for संस्कृत. </p>
+    nch-&gt;ञ्च्, nCh-&gt;ञ्छ्, nc-&gt;ञ्च्, nC-&gt;ञ्छ्, nchh-&gt;ञ्छ्,
+    nj-&gt;ञ्ज्, njh-&gt;ञ्झ्, nT-&gt;ण्ट्, nTh-&gt;ण्ठ्, nD-&gt;ण्ड्, nDh-&gt;ण्ढ्
+    c-&gt;च्, C-&gt;छ्, z-&gt;श्, S-&gt;ष्, jn-&gt;ज्ञ्, R-&gt;ऋ</p>
+<p>Examples: Type <code>saMskRta</code> for संस्कृत.</p>
 <h2 id="details">Details</h2>
 <ul>
-<li>The closely related m17n keyboard <a href="https://github.com/indic-transliteration/m17n-db-indic/blob/master/sa-vedic-itrans.mim">here</a></li>
-<li>The motivation behind additions made to the basic ITRANS scheme is described in <a href="https://sanskrit-coders.github.io/input/optitrans/">https://sanskrit-coders.github.io/input/optitrans/</a>, along with a tabulated comparison with several other transliteration schemes.</li>
+    <li>The closely related m17n keyboard <a href="https://github.com/indic-transliteration/m17n-db-indic/blob/master/sa-vedic-itrans.mim">here</a></li>
+    <li>The motivation behind some basic additions made to the basic ITRANS scheme is described <a href="https://sanskrit-coders.github.io/input/optitrans/https://sanskrit-coders.github.io/input/optitrans/">here</a>, along with a tabulated comparison with several other transliteration schemes.</li>
 </ul>
 
 <h3>Consonants</h3>
@@ -195,10 +198,10 @@ Devanagari. 'ka' is without any added vowel sign, where the vowel 'a' is inheren
 <th>ii</th><th>kI</th>
 <th>u</th><th>ku</th>
 <th>uu</th><th>kU</th>
+<th>R</th><th>kR</th>
 <th>RR</th><th>kRR</th>
-<th>RR^</th><th>kRR^</th>
-<th>LL</th><th>kLL</th>
-<th>LL^</th><th>kLL^</th>
+<th>LLi</th><th>kLLi</th>
+<th>LLI</th><th>kLLI</th>
 <th>e</th><th>ke</th>
 <th>ai</th><th>kai</th>
 <th>o</th><th>ko</th>
@@ -305,7 +308,7 @@ Devanagari. 'ka' is without any added vowel sign, where the vowel 'a' is inheren
     </tbody>
 </table>
 
-<h3>Consonantal Diacritics</h3>
+<h2>Consonantal Diacritics</h2>
 
 <p>Arranged with the vowels are two consonantal diacritics, the final nasal anusvāra ं 
 <kbd>M</kbd> and the final fricative visarga ः <kbd>H</kbd> (called अं aṃ and अः aḥ). 
