--- a/release/itrans/itrans_devanagari_sanskrit_pre_vedic/source/welcome/welcome.htm
+++ b/release/itrans/itrans_devanagari_sanskrit_pre_vedic/source/welcome/welcome.htm
@@ -93,7 +93,7 @@ text-align: right;
 <h2 id="details">Details</h2>
 <ul>
     <li>The closely related m17n keyboard <a href="https://github.com/indic-transliteration/m17n-db-indic/blob/master/sa-vedic-itrans.mim">here</a></li>
-    <li>The motivation behind some basic additions made to the basic ITRANS scheme is described <a href="https://sanskrit-coders.github.io/input/optitrans/https://sanskrit-coders.github.io/input/optitrans/">here</a>, along with a tabulated comparison with several other transliteration schemes.</li>
+    <li>The motivation behind some basic additions made to the basic ITRANS scheme is described <a href="https://sanskrit-coders.github.io/input/optitrans/">here</a>, along with a tabulated comparison with several other transliteration schemes.</li>
 </ul>
 
 <h3>Consonants</h3>
