--- a/experimental/b/beria_erfe_phonetic/source/readme.htm
+++ b/experimental/b/beria_erfe_phonetic/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Beria Erfe Phonetic</h1>
 
 <p>
-  This is a phonetic-based keyboard designed for the Zaghawa Beria language using the Beria Erfe script. Beria Erfe will be included in Unicode 17.0.</p>
+  This is a phonetic-based keyboard designed for the Zaghawa Beria language using the Beria Erfe script. The Beria Erfe is now included in Unicode 17.0.</p>
 <p><b>Warning for mobile users:</b> Unless the keyboard is used within the Keyman application on mobile devices, the font is not likely to display. Square boxes will appear.
 </p>
 
