--- a/experimental/b/beria_erfe_phonetic/source/welcome/welcome.htm
+++ b/experimental/b/beria_erfe_phonetic/source/welcome/welcome.htm
@@ -15,10 +15,14 @@
 <h1>Start Using Beria Erfe Phonetic</h1>
 
 <p>
-  This is a phonetic-based keyboard designed for the Zaghawa Beria language using the Beria Erfe script. Beria Erfe will be included in Unicode 17.0.
+  This is a phonetic-based keyboard designed for the Zaghawa Beria language using the Beria Erfe script. The Beria Erfe is now included in Unicode 17.0.
 </p>
 
+<p><b>Warning for mobile users:</b> Unless the keyboard is used within the Keyman application on mobile devices, the font is not likely to display. Square boxes will appear.
+</p>
 <h2>Desktop Keyboard layout</h2>
+
+<p>Combining must be typed <b>after</b> the vowel on which it appears.</p>
 <h3>Default (unshifted)</h3>
 <p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 <h3>Shift</h3>
