Rename keyboard, move files.

--- a/release/o/optitrans_devanagari_sanskrit_pre_vedic/source/readme.htm
+++ b/release/o/optitrans_devanagari_sanskrit_pre_vedic/source/readme.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<title>Pre-Vedic Sanskrit Devanagari Phonetic (ITRANS)</title>
+<title>Pre-Vedic Sanskrit Devanagari Phonetic (OPTITRANS)</title>
 </head>
     <style type="text/css">
         p { font: 10pt Tahoma; }
@@ -10,9 +10,9 @@
         h2 { font: bold 12pt Tahoma; color: #4444cc; }
       </style>
 <body>
-<h1 id="pre-vedic-sanskrit-devanagari-phonetic-itrans-">Pre-Vedic Sanskrit Devanagari Phonetic (ITRANS)</h1>
+<h1 id="pre-vedic-sanskrit-devanagari-phonetic-optitrans-">Pre-Vedic Sanskrit Devanagari Phonetic (OPTITRANS)</h1>
 <h2 id="description">Description</h2>
-<p>Pre-Vedic Sanskrit Devanagari Phonetic (ITRANS) keyboard is Sanskrit devanAgarI input method by a modified version of ITRANS and Harvard-Kyoto transliteration systems with the following special features:</p>
+<p>Pre-Vedic Sanskrit Devanagari Phonetic (OPTITRANS) keyboard is Sanskrit devanAgarI input method by a modified version of OPTITRANS and Harvard-Kyoto transliteration systems with the following special features:</p>
 <ul>
 <li>added support for reconstructed vedic pronunciation ai=ए, Ai=ऐ, au=ओ, Au=औ.</li>
 <li>allow input of hrasva ऎ and ऒ.</li>
