--- a/release/o/optitrans_devanagari_sanskrit_pre_vedic/source/welcome/welcome.htm
+++ b/release/o/optitrans_devanagari_sanskrit_pre_vedic/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-<title>Pre-Vedic Sanskrit Devanagari Phonetic (ITRANS)</title>
+<title>Pre-Vedic Sanskrit Devanagari Phonetic (OPTITRANS)</title>
 <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -73,7 +73,7 @@ text-align: right;
 </head>
 <body>
 <h2 id="description">Description</h2>
-<p>Pre-Vedic Sanskrit Devanagari Phonetic (ITRANS) keyboard is Sanskrit devanAgarI input method by a modified version of ITRANS and Harvard-Kyoto transliteration systems with the following special features:</p>
+<p>Pre-Vedic Sanskrit Devanagari Phonetic (OPTITRANS) keyboard is Sanskrit devanAgarI input method by a modified version of OPTITRANS and Harvard-Kyoto transliteration systems with the following special features:</p>
 <ul>
     <li>greater reliance on reconstructed early vedic pronunciation (details and demo <a href="https://vishvAsa.github.io/sanskrit/registers/early-vedic">here</a>) <ul>
         <li>ai=ए, Ai=ऐ, au=ओ, Au=औ.</li>
@@ -165,7 +165,7 @@ text-align: right;
 <h2>Vowels and Vowel Signs</h2>
 
 <p>In the following table, independent vowels, dependent vowel signs and vowel signs 
-combined with the consonant 'k' are shown in ITRANS Sanskrit Vedic transliteration 
+combined with the consonant 'k' are shown in OPTITRANS Sanskrit Pre-Vedic transliteration 
 scheme on the top two rows. The third row shows Devanagari Vowels in their independent 
 form on the left and their corresponding dependent form (maatraa or vowel sign) on the 
 right. The fourth row shows the vowel sign combined with the consonant 'k' in 
